--- a/index.html
+++ b/index.html
@@ -22,8 +22,7 @@
    </div>
     <div class="div2">
      <ul class="navbar-list2">
-      <a href="#"><li>Login</li></a>
-      <a href="#"><li>SignUp</li></a>
+      <a href="Signup.html"><li>Sign Up</li></a>
      </ul>
     </div>
   </nav>
@@ -34,7 +33,7 @@
           <div class="hero-section">
             <h2>Flixia</h2>
             <p class="para1">The best online streaming arena</p>
-            <button class="btn-hero"><a href="">Join Now</a></button>
+            <button class="btn-hero"><a href="Signup.html">Join Now</a></button>
           </div>
   </section>
 
