modified the html file

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
  <title>Flixia | Online Streaming Platform</title>
 </head>
 <body>
+  <!-- Navigation -->
  <header class="header">
   <nav class="navbar">
    <div class="div1">
@@ -32,7 +33,7 @@
   <section class="section">
           <div class="hero-section">
             <h2>Flixia</h2>
-            <p class="para1">The best online streaming arena</p>
+            <p class="para1">The best online streaming Platform</p>
             <button class="btn-hero"><a href="Signup.html">Join Now</a></button>
           </div>
   </section>
