--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <figure>
           <h4>Aliens
           </h4>
-          <p>avaliable</p>
+          <p>available</p>
           <button>Watch Now</button>
         </figure>
       </article>
@@ -81,7 +81,7 @@
             <img src="./images/thumb5.jpg" alt=""  width="300px" height="300px">
             <figure>
               <h4>Star Wars</h4>
-              <p>avaliable</p>
+              <p>available</p>
               <button>Watch Now</button>
             </figure>
           </article>
@@ -90,7 +90,7 @@
                 <img src="./images/thumb3.jpg" alt="" width="300px" height="300px">
                 <figure>
                   <h4>Lord Of the Rings</h4>
-                  <p>avaliable</p>
+                  <p>available</p>
                   <button>Watch Now</button>
                 </figure>
               </article>
