Made last modification to the html file

--- a/index.html
+++ b/index.html
@@ -53,10 +53,7 @@
       <div class="column col-right reveal">
         <h2 class="content-title">We Are FLIXIA</h2>
         <p class="para-text">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi
-          accusamus ad est incidunt illum ipsam cum voluptatem blanditiis,
-          deserunt quidem iusto fugiat. Consequatur enim at cumque
-          recusandae, aliquid nam consectetur.
+          Streaming videos online has become so easy and affordable. Flixia gives you the access to over 1000+ movies. All you have to do is sit at you home and watch all day long.
         </p>
         <a href="" class="btn">See More</a>
       </div>
